--- a/template/dev/sass/nav.sass
+++ b/template/dev/sass/nav.sass
@@ -69,7 +69,7 @@
     overflow: hidden
   &__drop-cell
     width: 235px
-    padding: 0 25px
+    padding: 0 25px 10px
   &__title
     text-transform: uppercase
     color: #232323
