--- a/template/dev/sass/state/animate.sass
+++ b/template/dev/sass/state/animate.sass
@@ -14,9 +14,9 @@
 
 @keyframes drop-down-menu
   0%
-    height: 0
+    height: auto
   100%
-    height: 320px
+    height: auto
 
 @keyframes rotate-scale-up
   0%
