--- a/template/prod/css/nav.css
+++ b/template/prod/css/nav.css
@@ -14,9 +14,9 @@
 
 @keyframes drop-down-menu {
   0% {
-    height: 0; }
+    height: auto; }
   100% {
-    height: 320px; } }
+    height: auto; } }
 
 @keyframes rotate-scale-up {
   0% {
@@ -93,7 +93,7 @@
 
 .nav__drop-cell {
   width: 235px;
-  padding: 0 25px; }
+  padding: 0 25px 10px; }
 
 .nav__title {
   text-transform: uppercase;
