--- a/template/dev/sass/main.sass
+++ b/template/dev/sass/main.sass
@@ -556,6 +556,8 @@
     line-height: 16px
     text-transform: uppercase
     margin-bottom: 2px
+    &_empty
+      height: 16px
   &__info
     color: #000000
     font-size: 14px
@@ -584,7 +586,7 @@
     padding: 16px 18px
     font-size: 13px
     font-weight: 300
-    color: #b1b1b1
+    color: #222222
     &::placeholder
       color: #b1b1b1
   &__button
