--- a/template/prod/css/main.css
+++ b/template/prod/css/main.css
@@ -601,6 +601,8 @@
   line-height: 16px;
   text-transform: uppercase;
   margin-bottom: 2px; }
+  .shop-delivery__title_empty {
+    height: 16px; }
 
 .shop-delivery__info {
   color: #000000;
@@ -632,7 +634,7 @@
   padding: 16px 18px;
   font-size: 13px;
   font-weight: 300;
-  color: #b1b1b1; }
+  color: #222222; }
   .shop-delivery__input::placeholder {
     color: #b1b1b1; }
 
